--- a/envoy.yaml
+++ b/envoy.yaml
@@ -21,6 +21,8 @@ static_resources:
               routes:
               - match: { prefix: "/" }
                 route: { host_rewrite: www.google.com, cluster: service_google }
+              - match: { prefix: "/hello" }
+                route: { host_rewrite: www.google.com, cluster: service_google }
           http_filters:
           - name: envoy.router
       tls_context:
